Fix displaying the uppermost card on mobile

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -77,7 +77,7 @@
     background-color: $main-background;
 
     @media (max-width: 800px) {
-      padding: 20px 12px;
+      padding: 108px 12px;
     }
   }
 }
