--- a/src/components/Floor.module.scss
+++ b/src/components/Floor.module.scss
@@ -9,7 +9,7 @@
   width: 480px;
   display: flex;
   justify-content: center;
-  margin: 12px 0;
+  margin: 8px 0;
   box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
 
   @media (max-width: 1024px) {
